[package]
name = "reticle-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The Reticle headless pipeline: import, DRC, route, extract, export, and render-to-image."
keywords = ["cli", "eda", "layout", "batch", "headless"]
categories = ["command-line-utilities", "science"]

[lints]
workspace = true

[[bin]]
name = "reticle"
path = "src/main.rs"

[dependencies]
reticle-geometry = { workspace = true }
reticle-model = { workspace = true }
reticle-io = { workspace = true }
reticle-index = { workspace = true }
reticle-drc = { workspace = true }
reticle-route = { workspace = true }
reticle-extract = { workspace = true }
reticle-render = { workspace = true }
reticle-diff = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }

[dev-dependencies]
reticle-lefdef = { workspace = true }
pollster = "0.4.0"
rkyv = "0.8.16"
