[package]
name = "reticle-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rate-limited demo server for Reticle: submit, status, and cancel endpoints designed for safe public exposure."
keywords = ["eda", "layout", "demo", "server", "axum"]
categories = ["web-programming", "science"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
# Match the relay crate's axum/tokio versions so a single copy links.
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
tower = { version = "0.5.3", features = ["util"] }

[dev-dependencies]
# Drive the router two ways: in-process oneshot requests (tower + body
# collection) and a real loopback socket for the lifecycle tests, which need the
# spawned harness task to keep advancing while a hand-rolled client polls.
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
    "io-util",
] }
