[package]
name = "reticle-drc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Declarative, incremental design-rule checking for Reticle."
keywords = ["drc", "eda", "layout", "verification"]
categories = ["science", "algorithms"]

[lints]
workspace = true

[dependencies]
reticle-geometry = { workspace = true }
reticle-model = { workspace = true }
reticle-index = { workspace = true }

[dev-dependencies]
# Wave 2 wires `proptest` against a naive checker oracle.
