[package]
name = "reticle-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Parameterized, DRC-clean-by-construction layout generators for Reticle (SKY130 subset)."
keywords = ["eda", "layout", "generator", "pcell", "sky130"]
categories = ["science", "algorithms"]

[lints]
workspace = true

[dependencies]
reticle-geometry = { workspace = true }
reticle-model = { workspace = true }
reticle-drc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
proptest = "1.11.0"
# Test-only: parse the committed tech files so the cleanliness proptests can run the
# real DRC engine over both PDKs, and the second-PDK GenTech can be reconstructed from
# a parsed Technology. Not a library dependency (keeps the lib wasm32-clean).
reticle-io = { workspace = true }
toml = "=1.1.2"
