[package]
name = "reticle-geometry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Exact integer 2D geometry primitives and robust boolean operations for Reticle."
keywords = ["geometry", "polygon", "boolean", "eda", "layout"]
categories = ["graphics", "science", "algorithms"]

[lints]
workspace = true

# `i_overlay` provides robust boolean/offset operations (ADR 0003).
[dependencies]
i_overlay = "7.0.2"

# `proptest` drives oracle tests; `criterion` drives benchmarks.
[dev-dependencies]
criterion = "0.8.2"
proptest = "1.11.0"

[[bench]]
name = "booleans"
harness = false
