[package]
name = "reticle-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Spatial indices for Reticle: R-tree, uniform grid, and a tile/LOD pyramid for out-of-core browsing."
keywords = ["spatial", "rtree", "index", "eda", "layout"]
categories = ["data-structures", "algorithms"]

[lints]
workspace = true

[dependencies]
reticle-geometry = { workspace = true }
rkyv = "0.8.16"
rstar = "0.13.0"
# Wave 1 wires `rstar` (bulk-loaded R-tree) and `rkyv` (zero-copy streaming).

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.11.0"
# Wave 1 wires `proptest` (vs the linear oracle here) and `criterion`.

[[bench]]
name = "index_build"
harness = false
