[package]
name = "reticle-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Spatial indices for Reticle: R-tree, uniform grid, and a tile/LOD pyramid for out-of-core browsing."
keywords = ["spatial", "rtree", "index", "eda", "layout"]
categories = ["data-structures", "algorithms"]

[lints]
workspace = true

[dependencies]
reticle-geometry = { workspace = true }
memmap2 = "0.9.11"
rkyv = "0.8.16"
rstar = "0.13.0"
# Wave 1 wires `rstar` (bulk-loaded R-tree) and `rkyv` (zero-copy streaming).
# `memmap2` backs the out-of-core `StreamingIndex`: it maps a tiled archive so a
# viewport query faults in only the pages it touches.

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.11.0"
# Wave 1 wires `proptest` (vs the linear oracle here) and `criterion`.
# Wave 2 (lane 2B) uses `pollster` as a runtime-light executor to drive the async
# `TileSource` trait in the native streamed-query proptest, so `reticle-index` gains no
# heavy async runtime (it stays lighter than `reticle-server`'s tokio). Already in the
# lockfile via other crates, so no new dependency version is introduced.
pollster = "0.4.0"

# The wasm `HttpRangeTileSource` fetches tiles over HTTP Range and caches them in OPFS.
# Its DOM/fetch/OPFS glue is `cfg(target_arch = "wasm32")`; the pure LRU and cache-key
# logic it sits on is target-independent and unit-tested natively. Versions match
# `reticle-app`/`web` so the wasm lockfile gains nothing new.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "Headers",
    "Response",
    "Navigator",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemSyncAccessHandle",
] }

[[bench]]
name = "index_build"
harness = false

[[example]]
name = "stream_demo"
