[package]
name = "reticle-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GDSII/OASIS/VLSIR import and export and technology-file parsing for Reticle."
keywords = ["gdsii", "oasis", "eda", "layout", "io"]
categories = ["parser-implementations", "encoding", "science"]

[lints]
workspace = true

[dependencies]
reticle-geometry = { workspace = true }
reticle-model = { workspace = true }
# Wave 1 wires `gds21` (GDSII) and, later, VLSIR/layout21 interop (ADR 0004).

[dev-dependencies]
# Wave 1 wires `proptest` and round-trip corpus fixtures.
