[package]
name = "reticle-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GDSII/OASIS/VLSIR import and export and technology-file parsing for Reticle."
keywords = ["gdsii", "oasis", "eda", "layout", "io"]
categories = ["parser-implementations", "encoding", "science"]

[lints]
workspace = true

[dependencies]
gds21 = "0.2.0"
reticle-geometry = { workspace = true }
reticle-model = { workspace = true }
# Wave 1 wires `gds21` (GDSII) and, later, VLSIR/layout21 interop (ADR 0004).

[dev-dependencies]
# `gds21` again so integration tests can hand-build foreign GDSII byte streams
# (TEXT elements with strans and so on) that our own exporter never produces.
gds21 = "0.2.0"
proptest = "1.11.0"
# The SKY130 corpus tests run the DRC subset over imported real standard cells
# (reticle-drc does not depend on reticle-io, so this dev-only edge is acyclic).
reticle-drc = { workspace = true }
# Wave 1 wires `proptest` and round-trip corpus fixtures.
