[package]
name = "reticle-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Versioned Protobuf schema and generated types for the Reticle document, wire, and collaboration formats."
keywords = ["protobuf", "prost", "schema", "eda", "layout"]
categories = ["encoding", "data-structures"]

[lints]
workspace = true

[dependencies]
# Wave 1 wires `prost` (generated types) and a `build.rs` using `prost-build` +
# `protoc-bin-vendored` (ADR 0008). The frozen schema lives in proto/reticle.proto.
