[package]
name = "reticle-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The wgpu renderer for Reticle: instanced pipelines, lyon tessellation, GPU-driven cell culling, and offscreen rendering."
keywords = ["wgpu", "rendering", "gpu", "eda", "layout"]
categories = ["graphics", "rendering"]

[lints]
workspace = true

[dependencies]
reticle-geometry = { workspace = true }
reticle-model = { workspace = true }
reticle-index = { workspace = true }
wgpu = "29.0.3"
lyon = "1.0.19"
pollster = "0.4.0"
glam = { version = "0.33.2", features = ["bytemuck"] }
bytemuck = { version = "1.25.0", features = ["derive"] }

# `image` is PNG-only: golden tests need no other codecs, and this avoids the
# heavy AVIF encoder chain (rav1e) and its unmaintained transitive `paste`.
# `proptest` drives the compaction test against a CPU reference over random bitsets.
# `reticle-io` parses the committed SKY130 technology file so the 3D stack tests
# run against the real process stack rather than hand-built entries.
[dev-dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
proptest = "1.11.0"
reticle-io = { workspace = true }

[[example]]
name = "fps_bench"
